--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,11 +20,17 @@ boltzmann = "molalign.boltzmann_average:cli_main"
 molalign = "molalign.run_molalign_tb:main"
 molalign-extended = "molalign.run_extended_grids_tb:main"
 align-grid-tb = "molalign.all_grid_tb:cli_main"
-align-grid-tb-parallel = "molalign.all_grid_tb_parallel:cli_main"
-molalign-extended-parallel = "molalign.run_extended_grids_tb_parallel:main"
+align-grid-tb-two-same = "molalign.all_grid_tb_two_solvents:cli_main"
 cluster-solv = "molalign.cluster_solv:main"
 cluster-solv-opt = "molalign.cluster_solv_opt:main"
 dGloc = "molalign.dGloc:main"
+att_factor = "molalign.att_factor:main"
+therm = "molalign.therm:main"
+corr = "molalign.corr:main"
+solv = "molalign.solv:main"
+align-grid-orca = "molalign.all_grid_orca:cli_main"
+align_orca = "molalign.align_many_to_one_orca:main"
+molalign-extended-orca = "molalign.run_extended_grids_orca:main"
 [build-system]
 requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
