Full overwrite with latest local version

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,29 +8,44 @@ requires-python = ">=3.9"
 dependencies = ["numpy", "scipy"]
 [project.scripts]
 cpcm-reader = "molalign.cpcm_to_npz:main"
-align-grid = "molalign.all_grid:main"
-xtb-scan = "molalign.xtb_scan:main"
-xtb-extract = "molalign.extract_xtb_results:main"
-molalign-run = "molalign.driver:main"
+#align-grid = "molalign.all_grid:main"
+#xtb-scan = "molalign.xtb_scan:main"
+#xtb-extract = "molalign.extract_xtb_results:main"
+#molalign-run = "molalign.driver:main"
 plot-grid-energy = "molalign.plot_grid_point_energy:main"
 plot-normals = "molalign.plot_normals:main"
 slice = "molalign.slice:main"
 plot-grid = "molalign.plot_grid:main"
 boltzmann = "molalign.boltzmann_average:cli_main"
-molalign = "molalign.run_molalign_tb:main"
+#molalign_tb = "molalign.run_molalign_tb:main"
 molalign-extended = "molalign.run_extended_grids_tb:main"
+#molalign = "molalign.run_extended_grids_tb_auto:main"
+#run-molalign = "molalign.full_auto:main"
 align-grid-tb = "molalign.all_grid_tb:cli_main"
-align-grid-tb-two-same = "molalign.all_grid_tb_two_solvents:cli_main"
-cluster-solv = "molalign.cluster_solv:main"
-cluster-solv-opt = "molalign.cluster_solv_opt:main"
-dGloc = "molalign.dGloc:main"
-att_factor = "molalign.att_factor:main"
-therm = "molalign.therm:main"
-corr = "molalign.corr:main"
+align-grid-tb-parallel = "molalign.all_grid_tb_parallel:cli_main"
+align-grid-tb-parallel-2 = "molalign.all_grid_tb_parallel2:cli_main"
+molalign-extended-parallel = "molalign.run_extended_grids_tb_parallel:main"
+#align-grid-tb-two-same = "molalign.all_grid_tb_two_solvents:cli_main"
+
+molalign-extended-parallel-2 = "molalign.run_extended_grids_tb_parallel2:main"
+#molalign-parallel ="molalign.merged:main"
+bolt = "molalign.bolt:cli_main"
+bolt-min = "molalign.bolt_min:main"
+#cluster-solv = "molalign.cluster_solv:main"
+#cluster-solv-opt = "molalign.cluster_solv_opt:main"
+#dGloc = "molalign.dGloc:main"
+#att_factor = "molalign.att_factor:main"
+#therm = "molalign.therm:main"
+#corr = "molalign.corr:main"
 solv = "molalign.solv:main"
-align-grid-orca = "molalign.all_grid_orca:cli_main"
-align_orca = "molalign.align_many_to_one_orca:main"
-molalign-extended-orca = "molalign.run_extended_grids_orca:main"
+#align-grid-orca = "molalign.all_grid_orca:cli_main"
+#align_orca = "molalign.align_many_to_one_orca:main"
+#atom_scan= "molalign.atom_scan:main"
+#element_scan= "molalign.element_scan:cli_main"
+#molalign-extended-orca = "molalign.run_extended_grids_orca:main"
+align-grid-xtb = "molalign.all_grid_xtb:cli_main"
+align_xtb = "molalign.align_many_to_one_xtb:main"
+molalign-extended-xtb = "molalign.run_extended_grids_xtb:main"
 [build-system]
 requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
