--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,14 +24,15 @@ molalign-extended = "molalign.run_extended_grids_tb:main"
 #run-molalign = "molalign.full_auto:main"
 align-grid-tb = "molalign.all_grid_tb:cli_main"
 align-grid-tb-parallel = "molalign.all_grid_tb_parallel:cli_main"
-align-grid-tb-parallel-2 = "molalign.all_grid_tb_parallel2:cli_main"
+align-grid-tb-parallel-3 = "molalign.all_grid_tb_parallel3:cli_main"
 molalign-extended-parallel = "molalign.run_extended_grids_tb_parallel:main"
 #align-grid-tb-two-same = "molalign.all_grid_tb_two_solvents:cli_main"
 molalign = "molalign.driver:main"
-molalign-extended-parallel-2 = "molalign.run_extended_grids_tb_parallel2:main"
+molalign-extended-parallel-3 = "molalign.driver3:main"
 #molalign-parallel ="molalign.merged:main"
 bolt = "molalign.bolt:cli_main"
 bolt-min = "molalign.bolt_min:main"
+dV = "molalign.volume:main"
 #cluster-solv = "molalign.cluster_solv:main"
 #cluster-solv-opt = "molalign.cluster_solv_opt:main"
 #dGloc = "molalign.dGloc:main"
@@ -39,11 +40,13 @@ bolt-min = "molalign.bolt_min:main"
 #therm = "molalign.therm:main"
 #corr = "molalign.corr:main"
 solv = "molalign.solv:main"
-#align-grid-orca = "molalign.all_grid_orca:cli_main"
-#align_orca = "molalign.align_many_to_one_orca:main"
+align-grid-orca = "molalign.all_grid_orca:cli_main"
+align_orca = "molalign.align_many_to_one_orca:main"
+molalign-orca = "molalign.driver_orca:main"
 #atom_scan= "molalign.atom_scan:main"
 #element_scan= "molalign.element_scan:cli_main"
 #molalign-extended-orca = "molalign.run_extended_grids_orca:main"
+dG = "molalign.dG:main"
 align-grid-xtb = "molalign.all_grid_xtb:cli_main"
 align_xtb = "molalign.align_many_to_one_xtb:main"
 molalign-extended-xtb = "molalign.run_extended_grids_xtb:main"
